<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_navigation_home"
        android:icon="@drawable/ic_home_24"
        android:checked="true"
        android:title="@string/title_home"

        />
    <item
        android:id="@+id/bottom_navigation_project"
        android:icon="@drawable/ic_project_24"
        android:title="@string/device"
        android:checked="true"

        />
    <item
        android:id="@+id/bottom_navigation_workplace"
        android:icon="@drawable/ic_workplace_24"
        android:title="@string/market"
        android:checked="true"/>
    <item
        android:id="@+id/bottom_navigation_account"
        android:icon="@drawable/ic_person"
        android:title="@string/bottom_nav_account"
        android:checked="true"/>

</menu>