<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/bottom_nav_workspace_home"
        android:icon="@drawable/ic_home_24"
        android:checked="true"
        android:title="@string/title_home"

        />
    <item
        android:id="@+id/bottom_nav_workspace_project"
        android:icon="@drawable/ic_project_24"
        android:title="@string/title_project"
        android:checked="true"

        />
    <item
        android:id="@+id/bottom_nav_workspace_workplace"
        android:icon="@drawable/ic_workplace_24"
        android:title="@string/title_workplace"
        android:checked="true"/>
    <item
        android:id="@+id/bottom_nav_workspace_add"
        android:icon="@drawable/ic_bar"
        android:title="@string/add"
        android:checked="true"/>

</menu>