<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login"
    android:fitsSystemWindows="true"
    android:background="@color/background_color"
    >
    <ImageView
        android:id="@+id/circle_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/circle" />
    <TextView
        android:id="@+id/tvLob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp"


        />

    <ImageView
        android:id="@+id/SplashLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/circle_top"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-40dp"
        android:layout_marginBottom="10dp"
        android:src="@drawable/s" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/SplashLogo"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="30dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:boxBackgroundColor="?attr/colorOnPrimary"
            app:endIconMode="custom"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:startIconDrawable="@drawable/ic_email"
            app:startIconTint="#6200EE"

            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:singleLine="true"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passError"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="?attr/colorOnPrimary"
            app:endIconMode="custom"
            app:passwordToggleEnabled="true"
            app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="#6200EE">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/poppinsregular"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingStart="5dp"
                android:singleLine="true"


                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_margin="20dp"
            android:background="@drawable/custom_button"
            android:fontFamily="@font/poppinsregular"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppinsregular"
            android:gravity="center"
            android:text="@string/create_new"
            android:textColor="@color/colorPrimary"
            android:textSize="16sp" />

    </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>