<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register"
    android:background="@color/background_color"
    >
        <ImageView
            android:id="@+id/circle_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:src="@drawable/circle" />
        <TextView
            android:id="@+id/tvLob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="40sp"
            />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="Let's create an account and experience"
        android:textSize="16sp"
        android:fontFamily="@font/poppinsmedium"
        android:layout_below="@+id/tvLob"
        android:textColor="@color/black"
        />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:layout_below="@+id/circle_top"
                android:paddingBottom="30dp"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="10dp"
                android:focusable="true" android:focusableInTouchMode="true"
                >
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    app:startIconDrawable="@drawable/ic_person"
                    app:endIconMode="custom"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:boxBackgroundColor = "?attr/colorOnPrimary"
                    app:startIconTint = "#6200EE"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/name"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:fontFamily="@font/poppinsregular"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:startIconDrawable="@drawable/ic_email"
                    app:endIconMode="custom"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:boxBackgroundColor = "?attr/colorOnPrimary"
                    app:startIconTint = "#6200EE"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:fontFamily="@font/poppinsregular"
                        />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passError"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    android:layout_marginTop="8dp"
                    app:shapeAppearance="?attr/shapeAppearanceMediumComponent"
                    app:boxBackgroundColor = "?attr/colorOnPrimary"
                    app:startIconTint = "#6200EE"
                    app:startIconDrawable="@drawable/ic_lock"
                    app:endIconMode="custom"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    >

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/prompt_password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:paddingStart="5dp"
                        android:singleLine="true"
                        android:fontFamily="@font/poppinsregular"
                        />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/register"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:fontFamily="@font/poppinsregular"
                    android:text="@string/register"
                    android:textColor="@android:color/white"
                    android:textSize="16sp" />
                <TextView
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:gravity="center"
                    android:text="@string/not_register"
                    android:textColor="@color/colorPrimary"
                    android:textSize="16sp"
                    android:fontFamily="@font/poppinsregular"
                    />
            </LinearLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

</RelativeLayout>

