<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".fragment.AccountFragment"

    >
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />

    <LinearLayout android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_str"
                    android:textSize="22sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/acc_help"
                    android:textColor="@color/black"
                    android:textSize="13sp"
                    android:layout_marginBottom="5dp"
                    />
            </LinearLayout>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3"
                android:src="@drawable/ic_account_balance_14"
                android:padding="13dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"

                android:src="@drawable/ic_person_pin_14" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="0.9"
                android:background="@drawable/custom_border_top"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.9"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"

                    >
                    <TextView
                        android:id="@+id/fragment_account_userName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/black"
                        android:layout_marginBottom="5dp"
                        />
                    <TextView
                        android:id="@+id/fragment_account_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="-"
                        android:textColor="@color/black"
                        android:textSize="12sp"
                        android:layout_marginBottom="10dp"
                        />
                </LinearLayout>

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginBottom="8dp"
                    android:padding="18dp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>
            />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <!-- layout item   -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:padding="5dp"
                android:src="@drawable/ic_language_16"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:background="@drawable/custom_border_top"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/language"
                    android:textSize="20sp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginBottom="8dp"
                    android:padding="15dp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:padding="5dp"
                android:src="@drawable/ic_save_14"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:background="@drawable/custom_border_top"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/acc_update"
                    android:textSize="20sp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginBottom="8dp"
                    android:padding="14dp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:padding="5dp"
                android:src="@drawable/ic_warning_14"

                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"
                android:background="@drawable/custom_border_top"

                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/acc_info"
                    android:textSize="20sp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:paddingLeft="8dp"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginBottom="8dp"
                    android:padding="14dp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>


        </LinearLayout>
        <LinearLayout
            android:id="@+id/signout"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            >

            <ImageView
                android:id="@+id/img_signout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:padding="8dp"
                android:src="@drawable/ic_logout_14" />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.9"
                android:orientation="horizontal"
                android:paddingLeft="10dp"
                android:paddingTop="5dp"


                >
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:text="@string/signout"
                    android:textSize="20sp"
                    android:layout_weight="0.8"
                    android:textColor="@color/black"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="gravity"
                    android:gravity="center_vertical"
                    android:paddingLeft="10dp"
                    />

                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:src="@drawable/ic_arrow_right"
                    android:layout_marginBottom="8dp"
                    android:padding="15dp"
                    android:layout_gravity="end"
                    />
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</RelativeLayout>

